--- a/mywx/app.wxss
+++ b/mywx/app.wxss
@@ -7,4 +7,11 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+}
+page{
+background-color:#f5f2f0;
+height:100%;
+}
+image{
+width:100%;
+}
