--- a/mywx/pages/community/community.wxml
+++ b/mywx/pages/community/community.wxml
@@ -1,15 +1,15 @@
 
 <view style="display:flex;flex-wrap: wrap-reverse;">
-    <view class='flex-item' wx:for="{{commendList}}">
+    <view class='flex-item' wx:for="{{communityList}}">
       <view class='w100 flex'>
-        <image src="../../images/{{item.pic}}" class='user-icon'/>
+        <image src="../../images/{{item.userPic}}" class='user-icon'/>
         <view class='title-item'>
-          <view class='size20'>111</view>
-          <view class='size18'>111</view>
+          <view class='size20'>{{item.username}}</view>
+          <view class='size18'>{{item.createtime}}</view>
         </view>
         <view class='item-oper flex'>
           <view class='w50 flex'>
-            <image src="{{imgUrl}}" class='icon-oper' bindtap="clickZan" data-src='../../images/zan.png'/>
+            <image src="{{item.zan ? '../../images/zan1.png':'../../images/zan.png'}}" class='icon-oper' bindtap="clickZan" id='{{item.id}}' style="opacity: {{opacity}}"/>
           </view>
           <view class='w50 flex'>
             <image src="../../images/ping.png" class='icon-oper'/>
@@ -17,12 +17,10 @@
         </view> 
       </view>
       <view class='w100'>
-        <view class='text-item'>111111111111111</view>
+        <view class='text-item size18'>{{item.content}}</view>
       </view>
       <view class='w100 flex'>
-        <image src='../../images/compic4.jpg' class='pic-item'/>
-        <image src='../../images/compic4.jpg' class='pic-item'/>
-        <image src='../../images/compic4.jpg' class='pic-item'/>
+        <image wx:for='{{item.pictures}}' wx:for-index="index" src='../../images/{{item}}' class='pic-item'/>
       </view>
       
     </view>
