--- a/mywx/pages/community/community.wxml
+++ b/mywx/pages/community/community.wxml
@@ -9,7 +9,7 @@
         </view>
         <view class='item-oper flex'>
           <view class='w50 flex'>
-            <image src="{{item.zan ? '../../images/zan1.png':'../../images/zan.png'}}" class='icon-oper' bindtap="clickZan" id='{{item.id}}' style="opacity: {{opacity}}"/>
+            <image data-src='{{item.zan}}{{opacity}}' src="../../images/zan{{opacity}}.png" class='icon-oper' bindtap="clickZan" id='{{item.id}}'/>
           </view>
           <view class='w50 flex'>
             <image src="../../images/ping.png" class='icon-oper'/>
