--- a/mywx/app.wxss
+++ b/mywx/app.wxss
@@ -16,3 +16,12 @@ color: #333;
 image{
 width:100%;
 }
+
+.flex{
+  display: flex;
+}
+.flex-item{
+  width: 100%;
+  background: #fff;
+  margin-bottom: 15rpx;
+}
