--- a/mywx/pages/person/person.wxss
+++ b/mywx/pages/person/person.wxss
@@ -1,67 +1,91 @@
-.home-view1{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
- 
-  height: 100%;
+.flex-item{
   width: 100%;
-  margin: 6px;
- 
+  background: #fff;
+  margin-bottom: 15rpx;
 }
- 
-.home-view3{
-  height: 20px;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
+.user-icon{
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: 30rpx;
+  margin-left: 20rpx;
+  margin-bottom: 30rpx;
 }
- 
-.home-view4{
-  display: flex;
-  align-items: center;
+.w100{
+  width: 100%;
 }
- 
-.home-image1{
-  height: 200px;
+.size20{
+  font-size: 38rpx;
 }
- 
-.home-image-heart{
-  width: 30px;
-  height: 30px;
+.size18{
+  font-size: 28rpx;
 }
- 
-.home-text1{
-  text-align: left;
-  line-height: 25px;
-  margin-top: 6px;
-  margin-right: 6px;
-  color: gray;
+
+.title-item{
+  height: 130rpx;
+  width: 300rpx;
+  margin-top: 30rpx;
+  margin-left: 20rpx;
+  line-height: 130rpx;
+  color: #fff;
 }
- 
-.home-text-heart{
-  width: 22px;
-  height: 22px;
-  margin-left: 10px;
-  border-radius: 20%;
-  pad: 5px;
-  text-align: center;
+.item-oper{
+  width: 160rpx;
+  height: 100rpx;
+  margin-top: 10rpx;
+  margin-left: 120rpx;
 }
- 
-.home-text-time{
-  text-align: center;
-  margin-right: 20px;
-  padding-top: 5px;
-  color: gray;
+.w50{
+  width: 50%;
 }
- 
-.home-view-line{
- width: 100%;
- height: 6px;
- margin-top: 50px;
- background-color: gainsboro;
+.icon-oper{
+  width: 60rpx;
+  height: 60rpx;
+  margin-top: 20rpx;
 }
- 
-.bgColor{
-  background-color: lightblue;
-  opacity: 0.6;
+.m-l-10{
+  margin-left: 5rpx;
+}
+.v-center{
+  height: 100rpx;
+  line-height: 100rpx;
+  font-size: 32rpx;
+}
+.text-item{
+  width: 700rpx;
+  margin-left: 10rpx;
+  margin-top: 10rpx;
+}
+.pic-item{
+  width: 237rpx;
+  height: 180rpx;
+  margin-top:10rpx;
+  margin-left:10rpx;
+  margin-bottom: 10rpx;
+
+}
+.item-content{
+  border-bottom:1px solid #eee;
+  width:700rpx;
+  margin-left:25rpx;
+  height: 90rpx;
+}
+.wo-icon{
+  width: 40rpx;
+  height: 40rpx;
+  margin-top: 25rpx;
+}
+.title-wo{
+  height: 90rpx;
+  line-height:  90rpx;
+  margin-left: 20rpx;
+  font-size: 30rpx;
+}
+.detail-icon{
+width:24rpx;
+height:24rpx;
+margin-top:32rpx;
+margin-left:500rpx;
+
 }
