--- a/mywx/pages/community/community.wxml
+++ b/mywx/pages/community/community.wxml
@@ -25,4 +25,8 @@
       
     </view>
 </view>
+<view class="weui-loadmore" hidden="{{isHideLoadMore}}">
+    <view class="weui-loading"></view>
+    <view class="weui-loadmore__tips">正在加载</view>
+  </view>
 
