--- a/mywx/pages/person/person.wxml
+++ b/mywx/pages/person/person.wxml
@@ -40,7 +40,7 @@
 </view>
 
 <view class='flex-item'>
-  <view class='item-content flex'>
+  <view class='item-content flex'  bindtap='pathTocom'>
     <image src='../../images/icons/wo5.png' class='wo-icon'/>
     <view class='title-wo'>社区活动</view>
     <image src='../../images/icons/detail.png' class='detail-icon'/>
@@ -55,7 +55,7 @@
     <view class='title-wo'>我的关注</view>
     <image src='../../images/icons/detail.png' class='detail-icon'/>
   </view>
-  <view class='item-content flex'>
+  <view class='item-content flex' bindtap='makePhoneCall'>
     <image src='../../images/icons/wo8.png' class='wo-icon'/>
     <view class='title-wo'>官方客服</view>
     <image src='../../images/icons/detail.png' class='detail-icon'/>
