--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -19,3 +19,9 @@
   bottom 0
   z-index 9
   background-color rgba(255,255,255,0.5)
+.main-content
+  width 80%
+  min-height 500px
+  background #ffffff
+  margin 0 auto
+  padding 20px
