--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -22,6 +22,8 @@
 .main-content
   width 80%
   min-height 500px
+  max-height 800px
+  overflow-y auto
   background #ffffff
   margin 0 auto
   padding 20px
