--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -27,3 +27,10 @@
   background #ffffff
   margin 0 auto
   padding 20px
+.el-form-item
+  margin-bottom 0
+  margin-left 0
+.el-form-item .el-form-item__content
+  line-height inherit
+.el-form-item .el-form-item__error
+  padding-top 0
