--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -9,7 +9,7 @@
   top 0
   right 0
   bottom 0
-  background-image  url("../images/bg.jpg")
+  //background-image  url("../images/bg.jpg")
   background-size 100% 100%
 .cover
   position absolute
