--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -11,6 +11,7 @@
   bottom 0
   //background-image  url("../images/bg.jpg")
   background-size 100% 100%
+  background #ffffff
 .cover
   position absolute
   left 0
