--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -35,3 +35,21 @@
   line-height inherit
 .el-form-item .el-form-item__error
   padding-top 0
+.m_t_90
+  margin-top 90px
+.m_b_60
+  margin-bottom 60px
+.colored-line
+  background: rgba(255,162,0,1.00);
+  margin: auto;
+  display: block;
+  width: 80px;
+  height: 2px;
+.section1
+  width 100%
+  background rgba(255,255,255,0.9)
+  border-bottom: 1px solid #dadfe3;
+  float left
+.section1 .contanier
+  width 80%
+  margin 0 auto
