--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -23,11 +23,13 @@
 .main-content
   width 80%
   min-height 500px
-  max-height 800px
   overflow-y auto
   background #ffffff
   margin 0 auto
   padding 20px
+  margin-top 80px
+.hello
+  margin-top 80px
 .el-form-item
   margin-bottom 0
   margin-left 0
@@ -53,3 +55,5 @@
 .section1 .contanier
   width 80%
   margin 0 auto
+.b_b_n
+  border-bottom none
