--- a/myVue/src/style/bgimg.styl
+++ b/myVue/src/style/bgimg.styl
@@ -1,3 +1,6 @@
+*
+  margin 0
+  padding 0
 #app
   font-family 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing antialiased;
@@ -37,6 +40,8 @@
   line-height inherit
 .el-form-item .el-form-item__error
   padding-top 0
+.m_t_30
+  margin-top 30px
 .m_t_90
   margin-top 90px
 .m_b_60
